--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "logseq-snippets",
     "private": true,
-    "version": "0.1.3",
+    "version": "0.1.6",
     "author": "Martin Möller <moellervdm@gmail.com>",
     "type": "module",
     "description": "Logseq Snippets Plugin",
@@ -16,6 +16,7 @@
         "url": "git+https://github.com/martinmoeller/logseq-snippets.git"
     },
     "scripts": {
+        "prebuild": "node scripts/bump-version.js",
         "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview"
